# rust-cfa-tools-api

./: Cargo.toml
src/: main.rs
src/database/: connect_mongo.rs  mod.rs
src/middleware/: cors.rs
src/models/: app_state.rs  create_user_request.rs  mod.rs
src/routes/: create_user.rs  mod.rs  mount_routes.rs
src/service/: validator.rs
